[package]
name = "systemprompt-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core MCP (Model Context Protocol) functionality for systemprompt.io OS"
include = ["src/**/*", "schema/**/*", "Cargo.toml", "README.md", "CHANGELOG.md", ".sqlx/**/*"]

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
inventory = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }

# Database
sqlx = { workspace = true }

# MCP Protocol
rmcp = { workspace = true }
rmcp-macros = { workspace = true }

# HTTP for MCP servers
axum = { workspace = true }
reqwest = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
sse-stream = { workspace = true }

# CLI
clap = { workspace = true }

# JWT validation
jsonwebtoken = { workspace = true }

# systemprompt.io integration
systemprompt-config = { workspace = true }
systemprompt-database = { workspace = true }
systemprompt-extension = { workspace = true }
systemprompt-identifiers = { workspace = true, features = ["sqlx"] }
systemprompt-loader = { workspace = true }
systemprompt-logging = { workspace = true }
systemprompt-models = { workspace = true }
systemprompt-traits = { workspace = true }

# Process management
uuid = { workspace = true }
rand = { workspace = true }
url = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[features]
default = ["cli"]
cli = []
