[package]
name = "systemprompt-oauth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "OAuth 2.0 authentication and authorization module for systemprompt.io OS"

[lints]
workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
inventory = { workspace = true }
systemprompt-models = { path = "../../shared/models", version = "0.0.11", features = ["web"] }

# Database
sqlx = { workspace = true }

# Traits
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
dotenvy = { workspace = true }
urlencoding = { workspace = true }
once_cell = { workspace = true }

# Validation
validator = { workspace = true }

# OAuth and crypto specific
rand = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
bcrypt = { workspace = true }

# WebAuthn
webauthn-rs = { workspace = true }

# HTTP types (framework-agnostic)
http = { workspace = true }

# Web framework (optional, for response types)
axum = { workspace = true, optional = true }

# HTTP client for CLI-to-REST calls
reqwest = { workspace = true }

# Core module dependencies
systemprompt-database = { path = "../../infra/database", version = "0.0.11" }
systemprompt-extension = { path = "../../shared/extension", version = "0.0.11" }
systemprompt-identifiers = { path = "../../shared/identifiers", version = "0.0.11", features = ["sqlx"] }
systemprompt-logging = { path = "../../infra/logging", version = "0.0.11" }
systemprompt-security = { path = "../../infra/security", version = "0.0.11" }
systemprompt-traits = { path = "../../shared/traits", version = "0.0.11" }



[features]
default = ["web"]
web = ["dep:axum"]

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
