[package]
name = "systemprompt-templates"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Template registry, loading, and rendering for systemprompt.io config-as-code AI governance deployments. Handlebars-powered template engine for the MCP governance pipeline."
readme = "README.md"
include = ["src/**/*", "defaults/**/*", "Cargo.toml", "README.md"]

[lints]
workspace = true

[dependencies]
# Template provider traits
systemprompt-template-provider = { workspace = true, features = ["tokio"] }

# Core async
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Template engine
handlebars = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["fs", "sync"] }

# Tracing
tracing = { workspace = true }

# Collections
indexmap = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
