[package]
name = "systemprompt-templates"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Template registry, loading, and rendering for systemprompt.io config-as-code AI governance deployments. Handlebars-powered template engine for the MCP governance pipeline."
readme = "README.md"
include = ["src/**/*", "defaults/**/*", "Cargo.toml", "README.md"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[dependencies]
# Template provider traits
systemprompt-template-provider = { workspace = true, features = ["tokio"] }

# Errors
thiserror = { workspace = true }

# Template engine
handlebars = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["fs", "sync"] }

# Tracing
tracing = { workspace = true }
