[package]
name = "systemprompt-users"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "User management for systemprompt.io AI governance infrastructure. 6-tier RBAC, sessions, IP bans, and role-scoped access control for the MCP governance pipeline."
readme = "README.md"
include = ["src/**/*", "schema/**/*", "build.rs", "Cargo.toml", "README.md", "CHANGELOG.md", ".sqlx/**/*"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[build-dependencies]
systemprompt-extension = { workspace = true }

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
inventory = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

systemprompt-database = { workspace = true }
systemprompt-extension = { workspace = true }
systemprompt-identifiers = { workspace = true, features = ["sqlx"] }
systemprompt-models = { workspace = true }
systemprompt-provider-contracts = { workspace = true }
systemprompt-traits = { workspace = true }

[package.metadata.cargo-machete]
# inventory: compile-time registration via register_extension!/submit_* macros (::inventory::submit!) / thiserror: derived through the domain_error! macro (#[derive(::thiserror::Error)])
ignored = ["inventory", "thiserror"]
