[package]
name = "systemprompt-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP API server and gateway for systemprompt.io OS"

[dependencies]
# Core runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }

# CLI
clap = { workspace = true }

# HTTP/Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["normalize-path"] }
tower_governor = { workspace = true }
governor = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }

# MCP transport
rmcp = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
urlencoding = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true }
sha2 = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# systemprompt.io crates
systemprompt-models = { path = "../../shared/models", version = "0.0.10", features = ["web"] }
systemprompt-loader = { path = "../../infra/loader", version = "0.0.10" }
systemprompt-identifiers = { path = "../../shared/identifiers", version = "0.0.10" }
systemprompt-traits = { path = "../../shared/traits", version = "0.0.10" }
systemprompt-extension = { path = "../../shared/extension", version = "0.0.10" }
systemprompt-runtime = { path = "../../app/runtime", version = "0.0.10" }
systemprompt-users = { path = "../../domain/users", version = "0.0.10" }
systemprompt-oauth = { path = "../../domain/oauth", version = "0.0.10" }
systemprompt-logging = { path = "../../infra/logging", version = "0.0.10" }
systemprompt-agent = { path = "../../domain/agent", version = "0.0.10" }
systemprompt-mcp = { path = "../../domain/mcp", version = "0.0.10" }
systemprompt-content = { path = "../../domain/content", version = "0.0.10" }
systemprompt-files = { path = "../../domain/files", version = "0.0.10" }
systemprompt-database = { path = "../../infra/database", version = "0.0.10" }
systemprompt-scheduler = { path = "../../app/scheduler", version = "0.0.10" }
systemprompt-events = { path = "../../infra/events", version = "0.0.10" }
systemprompt-analytics = { path = "../../domain/analytics", version = "0.0.10" }
systemprompt-security = { path = "../../infra/security", version = "0.0.10" }

# API registry
inventory = { workspace = true }

# JWT
jsonwebtoken = { workspace = true }
once_cell = { workspace = true }

# Authentication
bcrypt = { workspace = true }
validator = { workspace = true }
webauthn-rs = { workspace = true }

# Sync/compression
flate2 = { workspace = true }
tar = { workspace = true }

[lints]
workspace = true
