[package]
name = "systemprompt-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP API server and gateway for systemprompt.io OS"
include = ["src/**/*", "Cargo.toml", "README.md", "CHANGELOG.md", ".sqlx/**/*"]

[dependencies]
# Core runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }

# CLI
clap = { workspace = true }

# HTTP/Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["normalize-path"] }
tower_governor = { workspace = true }
governor = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }

# MCP transport
rmcp = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
urlencoding = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true }
sha2 = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# systemprompt.io crates
systemprompt-models = { workspace = true, features = ["web"] }
systemprompt-loader = { workspace = true }
systemprompt-identifiers = { workspace = true }
systemprompt-traits = { workspace = true }
systemprompt-extension = { workspace = true }
systemprompt-runtime = { workspace = true }
systemprompt-users = { workspace = true }
systemprompt-oauth = { workspace = true }
systemprompt-logging = { workspace = true }
systemprompt-agent = { workspace = true }
systemprompt-mcp = { workspace = true }
systemprompt-content = { workspace = true }
systemprompt-files = { workspace = true }
systemprompt-database = { workspace = true }
systemprompt-scheduler = { workspace = true }
systemprompt-events = { workspace = true }
systemprompt-analytics = { workspace = true }
systemprompt-security = { workspace = true }

# API registry
inventory = { workspace = true }

# JWT
jsonwebtoken = { workspace = true }
once_cell = { workspace = true }

# Authentication
bcrypt = { workspace = true }
validator = { workspace = true }
webauthn-rs = { workspace = true }

# Sync/compression
flate2 = { workspace = true }
tar = { workspace = true }

[lints]
workspace = true
