[package]
name = "systemprompt-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Axum-based HTTP server and API gateway for systemprompt.io AI governance infrastructure. Exposes governed agents, MCP, A2A, and admin endpoints with rate limiting and RBAC."
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "README.md", "CHANGELOG.md"]

[dependencies]
# Core runtime
tokio = { workspace = true, features = ["fs", "process", "signal"] }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }

# CLI

# HTTP/Web framework
axum = { workspace = true }
tower-http = { workspace = true, features = ["normalize-path"] }
tower_governor = { workspace = true }
governor = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }

# MCP transport

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
ipnet = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }


# systemprompt.io crates
systemprompt-models = { workspace = true, features = ["web"] }
systemprompt-config = { workspace = true }
systemprompt-loader = { workspace = true }
systemprompt-identifiers = { workspace = true }
systemprompt-traits = { workspace = true }
systemprompt-extension = { workspace = true }
systemprompt-runtime = { workspace = true, features = ["geolocation"] }
systemprompt-users = { workspace = true }
systemprompt-oauth = { workspace = true }
systemprompt-logging = { workspace = true }
systemprompt-agent = { workspace = true }
systemprompt-mcp = { workspace = true }
systemprompt-content = { workspace = true }
systemprompt-files = { workspace = true }
systemprompt-database = { workspace = true }
systemprompt-scheduler = { workspace = true }
systemprompt-events = { workspace = true }
systemprompt-analytics = { workspace = true }
systemprompt-ai = { workspace = true }
systemprompt-security = { workspace = true }
systemprompt-marketplace = { workspace = true }
systemprompt-slack = { workspace = true }
systemprompt-teams = { workspace = true }

# API registry
inventory = { workspace = true }

# JWT
jsonwebtoken = { workspace = true }

# Authentication
bcrypt = { workspace = true }
validator = { workspace = true }
webauthn-rs = { workspace = true }

# System
nix = { workspace = true }

# Sync/compression
flate2 = { workspace = true }
tar = { workspace = true }

# OTel ingest (OTLP/HTTP Protobuf)
prost = { workspace = true }
opentelemetry-proto = { workspace = true }

[features]
default = []
# Re-exports private protocol-matrix entry points (canonical request/response
# encoders/decoders) and the messaging/Slack form helpers so the
# integration-tests crate can drive them as pure units. It also enables the
# Slack/Teams `test` endpoint overrides and the env-driven Teams
# endpoint redirection so a full router happy-path can intercept outbound and
# inbound HTTP with a loopback mock server. Production builds leave the feature
# off; the modules stay private and all endpoints stay hardcoded.
test-api = ["systemprompt-slack/test", "systemprompt-teams/test"]

[lints]
workspace = true
