[package]
name = "systemprompt-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "systemprompt.io OS - CLI for agent orchestration, AI operations, and system management"
include = ["src/**/*", "Cargo.toml", "README.md", "CHANGELOG.md", ".sqlx/**/*"]

[lints]
workspace = true

[lib]
name = "systemprompt_cli"
path = "src/lib.rs"

[dependencies]
# Core runtime
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# systemprompt.io crates
systemprompt-runtime = { workspace = true }
systemprompt-agent = { workspace = true }
systemprompt-mcp = { workspace = true }
systemprompt-api = { workspace = true }
systemprompt-logging = { workspace = true }
systemprompt-users = { workspace = true }
systemprompt-oauth = { workspace = true }
systemprompt-database = { workspace = true }
systemprompt-content = { workspace = true }
systemprompt-files = { workspace = true }
systemprompt-scheduler = { workspace = true }
systemprompt-config = { workspace = true }
systemprompt-analytics = { workspace = true }
systemprompt-security = { workspace = true }
systemprompt-ai = { workspace = true }
systemprompt-sync = { workspace = true }
systemprompt-generator = { workspace = true }
systemprompt-models = { workspace = true }
systemprompt-loader = { workspace = true }
systemprompt-identifiers = { workspace = true }
systemprompt-traits = { workspace = true }
systemprompt-extension = { workspace = true }
systemprompt-cloud = { workspace = true }
systemprompt-client = { workspace = true }

# Additional dependencies used by CLI modules
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
console = { workspace = true }
tabled = { workspace = true }
inventory = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = { workspace = true }
futures-util = { workspace = true }
rmcp = { workspace = true }
atty = { workspace = true }
dialoguer = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
axum = { workspace = true }
open = { workspace = true }
urlencoding = { workspace = true }
url = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
indicatif = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
jsonwebtoken = { workspace = true }
tempfile = { workspace = true }
