[package]
name = "systemprompt-cloud"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "systemprompt.io Cloud infrastructure - API client, credentials, OAuth"

[lints]
workspace = true

[features]
test-utils = []

[dependencies]
# Core
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

# HTTP
reqwest = { workspace = true }
axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Validation
validator = { workspace = true }

# Security
base64 = { workspace = true }

# Utilities
tokio = { workspace = true }
open = { workspace = true }
urlencoding = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
reqwest-eventsource = { workspace = true }
async-stream = { workspace = true }

# CLI
clap = { workspace = true }

# Utilities
uuid = { workspace = true }

# Internal dependencies
systemprompt-identifiers = { path = "../../shared/identifiers", version = "0.0.11" }
systemprompt-models = { path = "../../shared/models", version = "0.0.11" }
systemprompt-client = { path = "../../shared/client", version = "0.0.11" }
systemprompt-logging = { path = "../logging", version = "0.0.11" }

[dev-dependencies]
tempfile.workspace = true
