[package]
name = "systemprompt-cloud"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Cloud API client, credentials, OAuth, and tenant management for systemprompt.io AI governance deployments. Remote sync and multi-tenant orchestration for the MCP governance pipeline."
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core
thiserror = { workspace = true }

# HTTP
reqwest = { workspace = true }
axum = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# Validation
validator = { workspace = true }

# Security
base64 = { workspace = true }

# Utilities
tokio = { workspace = true }
open = { workspace = true }
urlencoding = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
reqwest-eventsource = { workspace = true }
async-stream = { workspace = true }

# CLI
clap = { workspace = true }

# Utilities

# Internal dependencies
systemprompt-identifiers = { workspace = true }
systemprompt-models = { workspace = true }
systemprompt-loader = { workspace = true }
systemprompt-extension = { workspace = true }
systemprompt-logging = { workspace = true, features = ["cli"] }

[dev-dependencies]
tempfile.workspace = true
