[package]
name = "systemprompt-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Configuration module for systemprompt.io - environment configuration and validation"

[lints]
workspace = true

[dependencies]
# Core runtime
anyhow = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }

# Utilities
regex = { workspace = true }

# systemprompt.io dependencies
systemprompt-logging = { path = "../logging", version = "0.0.8" }
systemprompt-models = { path = "../../shared/models", version = "0.0.8" }
